# gridops

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  components.json  compose.ops.yaml  compose.yaml  drizzle.config.ts  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: actionlint.yaml
.github/runner/: Dockerfile  README.md
.github/workflows/: ci.yml
crates/gridops-api/: Cargo.toml
crates/gridops-api/src/: auth.rs  error.rs  github_app.rs  main.rs  oauth.rs  resources.rs  state.rs  webhooks.rs
crates/gridops-core/: Cargo.toml
crates/gridops-core/src/: autoscaling.rs  config.rs  crypto.rs  db.rs  github.rs  lib.rs  models.rs
crates/gridops-manager/: Cargo.toml
crates/gridops-manager/src/: main.rs
crates/gridops-reconciler/: Cargo.toml
crates/gridops-reconciler/src/: main.rs
crates/gridops-tart-agent/: Cargo.toml
crates/gridops-tart-agent/src/: main.rs
deploy/: nginx.conf
deploy/launchd/: dev.gridops.tart-agent.plist
deploy/traefik/: ops.antonlabs.cc.yml
docs/: macos-runners.md
drizzle/: 0000_pale_zombie.sql  0001_strange_tomorrow_man.sql  0002_youthful_black_tarantula.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  _journal.json
migrations/: 0001_initial.sql  0002_runner_group.sql  0003_autoscaling.sql  0004_runtime_github_app.sql  0005_durable_runner_logs.sql  0006_runner_job_history.sql  0007_runner_pool_configuration_versions.sql  0008_capacity_history.sql  0009_github_runner_cleanup.sql  0010_user_roles.sql  0011_connected_repositories_only.sql  0012_multi_repository_pools.sql  0013_runner_identity_scope.sql  0014_runner_pool_installations.sql  0015_runner_provisioning_circuit.sql  0016_runner_provider.sql  0017_multi_provider_pools.sql
public/: site.webmanifest
scripts/: configure-tart-manager.sh  install-tart-agent.sh  prepare-tart-runner-image.sh  pull-tart-image-resumable.sh
src/: main.tsx  router.tsx  theme-init.ts
src/components/: app-shell.tsx  async-action-button.tsx  grid-logo.tsx  list-pagination.tsx  resource-page-loading.tsx  resource-page.tsx  status-badge.tsx  theme-provider.tsx  theme-toggle.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  searchable-multi-select.tsx  searchable-select.tsx  table.tsx
src/features/dashboard/: dashboard.functions.ts  dashboard.server.ts  types.ts
src/features/operations/: operations.functions.ts  operations.server.ts
src/features/runner-pools/: resource-risk.ts  runner-pools.functions.ts  runner-pools.server.ts  schemas.ts
src/lib/: api.ts  auth-navigation.ts  log-follow.ts  pagination.ts  theme.ts  use-live-route-refresh.ts  utils.ts
src/manager/: index.ts
src/reconciler/: index.ts
src/routes/: __root.tsx  audit-log.tsx  index.tsx  live-logs.tsx  login.tsx  repositories.tsx  runner-pools.tsx  runner-pools_.$poolId.tsx  runner-pools_.new.tsx  runners.tsx  settings.tsx  webhooks.tsx  workflow-runs.tsx  workflow-runs_.$runId.tsx
src/routes/api/: health.ts
src/routes/api/webhooks/: github.ts
src/routes/api/workflow-runs/$runId/: logs.ts
src/routes/auth/: github.ts  logout.ts
src/routes/auth/github/: callback.ts
src/server/: config.server.ts  crypto.server.ts
src/server/auth/: auth.functions.ts  session.server.ts
src/server/db/: client.server.ts  migrate.ts  schema.ts
src/server/github/: api.server.ts  oauth.server.ts  token.server.ts  webhooks.server.ts
src/server/runner-manager/: client.server.ts
src/styles/: app.css
tests/: auth-navigation.test.ts  log-follow.test.ts  pagination.test.ts  runner-pool-resource-risk.test.ts  runner-pool-schema.test.ts  searchable-select.test.ts  theme.test.ts
