[workspace]
members = [
  "crates/gridops-api",
  "crates/gridops-core",
  "crates/gridops-manager",
  "crates/gridops-reconciler",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/iamngoni/gridops"

[workspace.dependencies]
aes-gcm = "0.11.0"
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["macros", "ws"] }
axum-extra = { version = "0.12.6", features = ["cookie", "typed-header"] }
base64 = "0.22.1"
bollard = "0.21.0"
chrono = { version = "0.4.44", features = ["serde"] }
futures-util = "0.3.32"
hex = "0.4.3"
hmac = "0.12.1"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
rand = "0.10.0"
reqwest = { version = "0.13.4", default-features = false, features = ["form", "json", "rustls", "stream"] }
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros", "chrono", "uuid"] }
subtle = "2.6.1"
thiserror = "2.0.18"
tokio = { version = "1.53.1", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["catch-panic", "compression-gzip", "cors", "request-id", "sensitive-headers", "set-header", "timeout", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
url = "2.5.8"
uuid = { version = "1.24.0", features = ["v4", "serde"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
missing_errors_doc = "allow"
must_use_candidate = "allow"
struct_excessive_bools = "allow"
needless_raw_string_hashes = "allow"
too_many_lines = "allow"
similar_names = "allow"
map_unwrap_or = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
duration_subsec = "allow"
redundant_closure_for_method_calls = "allow"
match_same_arms = "allow"
collapsible_if = "allow"
ptr_arg = "allow"
unnecessary_wraps = "allow"
